<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <item
        android:id="@+id/item3"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/allNote"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/item1"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/New"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/item2"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/back"
        tools:ignore="AppCompatResource" />

</menu>
