<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <!-- 刷新 -->
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/refresh"
            android:scaleX="1.1"
            android:scaleY="1.1" />

        <!-- 城市名 -->
        <TextView
            android:id="@+id/tv_cityName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:onClick="changeCity"
            android:text="@string/positionName"
            android:textColor="#fff"
            android:textSize="35sp" />

        <!-- 搜索  -->
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/search"
            android:onClick="changeCity"
            android:scaleX="1.1"
            android:scaleY="1.1"
            tools:ignore="OnClick" />
    </LinearLayout>
    <!-- 温度 -->
    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/temp"
        android:textColor="#fff"
        android:textSize="60sp" />
    <!-- 天气 -->
    <TextView
        android:id="@+id/tv_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/weather"
        android:textColor="#fff"
        android:textSize="30sp" />

    <!-- 下半部分  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <!-- 污染等级 -->
        <TextView
            android:id="@+id/tv_pmLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pmLevel"
            android:textColor="#fff"
            android:textSize="20sp" />

        <!-- 风速 -->
        <TextView
            android:id="@+id/tv_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/wind"
            android:textColor="#fff"
            android:textSize="20sp" />
        <!-- 日期 -->
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/bottomScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <!--提醒事项 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/todo"
            android:textColor="#fff"
            android:textSize="23sp" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:onClick="addNote"
            android:scaleType="centerCrop"
            android:src="@drawable/add2" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:divider="#00000000"
        android:dividerHeight="15dp" />
</LinearLayout>