<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#11FFC107"
    android:paddingHorizontal="15dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:textColor="#C59505"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/ed_title"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/input_shape"
        android:ems="10"
        android:paddingLeft="10dp"
        android:textColor="#C59505" />

    <!-- 内容 -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:textColor="#C59505"
        android:textSize="25sp" />

    <!-- 内容输入框 -->
    <EditText
        android:id="@+id/ed_content"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/input_shape"
        android:gravity="top"
        android:paddingStart="5dp"
        android:textColor="#C59505" />

    <ImageButton
        android:id="@+id/saveBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/save"
        android:layout_marginTop="10dp"
        android:text="@string/note_save" />

</LinearLayout>
